// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cart Component > should render cart with items 1`] = `
<div
  class="max-w-4xl mx-auto"
>
  <div
    class="flex items-center justify-between mb-8"
  >
    <div
      class="flex items-center space-x-4"
    >
      <a
        class="inline-flex items-center space-x-2 text-gray-600 hover:text-gray-900"
        data-discover="true"
        href="/restaurant"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
        <span>
          Continue Shopping
        </span>
      </a>
    </div>
    <h1
      class="text-3xl font-bold text-gray-900"
    >
      Shopping Cart
    </h1>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-8"
  >
    <div
      class="lg:col-span-2 space-y-4"
    >
      <div
        class="card"
      >
        <div
          class="flex items-center space-x-4"
        >
          <img
            alt="Pizza Margherita"
            class="w-20 h-20 object-cover rounded-lg"
            src="/images/pizza.jpg"
          />
          <div
            class="flex-1"
          >
            <h3
              class="font-semibold text-gray-900"
            >
              Pizza Margherita
            </h3>
            <p
              class="text-sm text-gray-600 mb-2"
            />
          </div>
          <div
            class="text-right"
          >
            <div
              class="text-lg font-semibold text-gray-900 mb-2"
            >
              $
              NaN
            </div>
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="p-1 rounded-full border border-gray-300 hover:bg-gray-50"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-minus h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                </svg>
              </button>
              <span
                class="w-8 text-center font-medium"
              >
                2
              </span>
              <button
                class="p-1 rounded-full border border-gray-300 hover:bg-gray-50"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                class="p-1 text-red-500 hover:text-red-700"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6h18"
                  />
                  <path
                    d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                  />
                  <path
                    d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                  />
                  <line
                    x1="10"
                    x2="10"
                    y1="11"
                    y2="17"
                  />
                  <line
                    x1="14"
                    x2="14"
                    y1="11"
                    y2="17"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="flex items-center space-x-4"
        >
          <img
            alt="Caesar Salad"
            class="w-20 h-20 object-cover rounded-lg"
            src="/images/salad.jpg"
          />
          <div
            class="flex-1"
          >
            <h3
              class="font-semibold text-gray-900"
            >
              Caesar Salad
            </h3>
            <p
              class="text-sm text-gray-600 mb-2"
            />
            <div
              class="text-xs text-gray-500 mb-2"
            >
              <div>
                Caesar
              </div>
              <div>
                Extra
              </div>
            </div>
          </div>
          <div
            class="text-right"
          >
            <div
              class="text-lg font-semibold text-gray-900 mb-2"
            >
              $
              NaN
            </div>
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="p-1 rounded-full border border-gray-300 hover:bg-gray-50"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-minus h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                </svg>
              </button>
              <span
                class="w-8 text-center font-medium"
              >
                1
              </span>
              <button
                class="p-1 rounded-full border border-gray-300 hover:bg-gray-50"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                class="p-1 text-red-500 hover:text-red-700"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6h18"
                  />
                  <path
                    d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                  />
                  <path
                    d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                  />
                  <line
                    x1="10"
                    x2="10"
                    y1="11"
                    y2="17"
                  />
                  <line
                    x1="14"
                    x2="14"
                    y1="11"
                    y2="17"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lg:col-span-1"
    >
      <div
        class="card sticky top-4"
      >
        <h3
          class="text-lg font-semibold text-gray-900 mb-4"
        >
          Order Summary
        </h3>
        <div
          class="space-y-2 mb-4"
        >
          <div
            class="flex justify-between text-sm"
          >
            <span>
              Subtotal
            </span>
            <span>
              $
              34.48
            </span>
          </div>
          <div
            class="flex justify-between text-sm"
          >
            <span>
              Tax (8%)
            </span>
            <span>
              $
              2.76
            </span>
          </div>
          <div
            class="border-t pt-2 flex justify-between font-semibold"
          >
            <span>
              Total
            </span>
            <span>
              $
              37.24
            </span>
          </div>
        </div>
        <button
          class="w-full btn-primary "
        >
          Checkout
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cart Component > should render cart with single item 1`] = `
<div
  class="max-w-4xl mx-auto"
>
  <div
    class="flex items-center justify-between mb-8"
  >
    <div
      class="flex items-center space-x-4"
    >
      <a
        class="inline-flex items-center space-x-2 text-gray-600 hover:text-gray-900"
        data-discover="true"
        href="/restaurant"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
        <span>
          Continue Shopping
        </span>
      </a>
    </div>
    <h1
      class="text-3xl font-bold text-gray-900"
    >
      Shopping Cart
    </h1>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-8"
  >
    <div
      class="lg:col-span-2 space-y-4"
    >
      <div
        class="card"
      >
        <div
          class="flex items-center space-x-4"
        >
          <img
            alt="Burger Deluxe"
            class="w-20 h-20 object-cover rounded-lg"
            src="/images/burger.jpg"
          />
          <div
            class="flex-1"
          >
            <h3
              class="font-semibold text-gray-900"
            >
              Burger Deluxe
            </h3>
            <p
              class="text-sm text-gray-600 mb-2"
            />
          </div>
          <div
            class="text-right"
          >
            <div
              class="text-lg font-semibold text-gray-900 mb-2"
            >
              $
              NaN
            </div>
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="p-1 rounded-full border border-gray-300 hover:bg-gray-50"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-minus h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                </svg>
              </button>
              <span
                class="w-8 text-center font-medium"
              >
                1
              </span>
              <button
                class="p-1 rounded-full border border-gray-300 hover:bg-gray-50"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
              </button>
              <button
                class="p-1 text-red-500 hover:text-red-700"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6h18"
                  />
                  <path
                    d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                  />
                  <path
                    d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                  />
                  <line
                    x1="10"
                    x2="10"
                    y1="11"
                    y2="17"
                  />
                  <line
                    x1="14"
                    x2="14"
                    y1="11"
                    y2="17"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lg:col-span-1"
    >
      <div
        class="card sticky top-4"
      >
        <h3
          class="text-lg font-semibold text-gray-900 mb-4"
        >
          Order Summary
        </h3>
        <div
          class="space-y-2 mb-4"
        >
          <div
            class="flex justify-between text-sm"
          >
            <span>
              Subtotal
            </span>
            <span>
              $
              15.99
            </span>
          </div>
          <div
            class="flex justify-between text-sm"
          >
            <span>
              Tax (8%)
            </span>
            <span>
              $
              1.28
            </span>
          </div>
          <div
            class="border-t pt-2 flex justify-between font-semibold"
          >
            <span>
              Total
            </span>
            <span>
              $
              17.27
            </span>
          </div>
        </div>
        <button
          class="w-full btn-primary "
        >
          Checkout
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cart Component > should render empty cart state 1`] = `
<div
  class="max-w-4xl mx-auto"
>
  <div
    class="text-center py-16"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-shopping-cart h-16 w-16 text-gray-300 mx-auto mb-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="8"
        cy="21"
        r="1"
      />
      <circle
        cx="19"
        cy="21"
        r="1"
      />
      <path
        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
      />
    </svg>
    <h2
      class="text-2xl font-semibold text-gray-900 mb-2"
    >
      Your cart is empty
    </h2>
    <p
      class="text-gray-600 mb-6"
    >
      Add some delicious items to get started!
    </p>
    <a
      class="btn-primary"
      data-discover="true"
      href="/restaurant"
    >
      Browse Restaurants
    </a>
  </div>
</div>
`;
